# math7243-xn2

./: .gitignore  README.md  pyproject.toml  relevant_genes.json  xn2_neural_net_primary_disease.ipynb
math7243_xn2/: Data_Analysis.ipynb  Decision_Tree.ipynb  KNN-Classifier.ipynb  Random-Forest.ipynb  __main__.py  basic.py  basic_models.py  component_analysis.py  final_test.py  initial_test.py  l1_sweep.py  ovr.py  pca.py  svc_sweep.py
