[tool.poetry]
name = "math7243-xn2"
version = "0.1.0"
description = ""
authors = ["Dimitar Dimitrov <dimitrov.d@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
