[tool.poetry]
name = "math7243-xn2"
version = "0.1.0"
description = ""
authors = ["Dimitar Dimitrov <dimitrov.d@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "<2.1.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
tensorflow = {extras = ["-and-cuda"], version = "^2.18.0"}
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
reorder-python-imports = "^3.14.0"
black = "^24.10.0"
pylint = "^3.3.1"
mypy = "^1.13.0"
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
